# judgement-game

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  judgement.db  main.py  package.json  pyproject.toml  simulate_game.py  tsconfig.json
public/: client.js  index.html  styles.css
src/: index.ts  types.ts
src/game/: logic.ts
src/judgement/: game_logic.py  main.py  models.py  room_manager.py  websocket_handler.py
src/socket/: manager.ts
src/state/: store.redis.ts  store.ts
static/: game.html  index.html  manifest.json  sw.js
static/css/: style.css
static/js/: app.js  game.js  sounds.js
tests/: __init__.py
tests/backend/: __init__.py  test_game_logic.py  test_websocket_flow.py
tests/ui/: __init__.py  conftest.py  test_four_player_game.py  test_game_flow.py  test_lobby.py  test_mobile_layout.py
