[project]
name = "judgement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (full round / next round flow).",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx[http2]>=0.27.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.45.0",
]
